--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -2,6 +2,10 @@
   <h3>Home Page</h3>
 </div>
 
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
 <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#news">News</a>
