--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -6,9 +6,23 @@
   <router-outlet></router-outlet>
 </div>
 
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+<!--  <div class=container>
+  <div class = row>
+    <div class=col-sm-12>
+      <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#catalog.component.html">Catalog</a>
+        <a href="#shopping-cart.component.html">Shopping Cart</a>
+      </div>
+    </div>
+  </div>
 </div>
+-->
+
+
+
+
+
+
+
+
