--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -1,16 +1,19 @@
-<div>
-  <h3>Home Page</h3>
-</div>
-
 <div class="container">
   <router-outlet></router-outlet>
 </div>
 
 <div class="container">
+
+  <div class="row">
+    <div>
+      <h3>Home Page</h3>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-sm-12">
       <div class="topnav">
-        <a class="active" href="#home">Home</a>
+        <a class="active" style="margin-right:150px" href="#home">Home</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
