--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -14,9 +14,9 @@
     <div class="col-sm-12">
       <div class="topnav">
         <a class="active" style="margin-right:150px" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a style="margin-right:150px" href="#news">News</a>
+        <a style="margin-right:150px" href="#contact">Contact</a>
+        <a style="margin-right:150px" href="#about">About</a>
       </div>
     </div>
   </div>
