--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <router-outlet></router-outlet>
+  <router-outlet>
+  </router-outlet>
 </div>
 
 <div class="container">
@@ -10,23 +11,14 @@
     </div>
   </div>
 
-  <div class="row">
+<div class="row">
     <div class="col-sm-12">
       <div class="topnav">
         <a class="active" style="margin-right:150px" href="#home">Home</a>
-        <a style="margin-right:150px" href="#news">News</a>
-        <a style="margin-right:150px" href="#contact">Contact</a>
-        <a style="margin-right:150px" href="#about">About</a>
+        <a style="margin-right:150px" href="#catalog.component.html">Products</a>
+        <a style="margin-right:150px" href="#shopping-cart.component.html">Shopping Cart</a>
       </div>
     </div>
   </div>
 </div>
--->
-
-
-
-
-
-
-
 
