--- a/Alumni-Swag-App/src/app/app.component.css
+++ b/Alumni-Swag-App/src/app/app.component.css
@@ -3,7 +3,7 @@
 }
 
 .topnav {
-    width: 1000px;
-    border-style: solid;
-    border-color: orange;
+    width: 1200px;
+    height: 50px;
+    background: rgb(255, 145, 0);
 }
