--- a/Alumni-Swag-App/src/app/app.component.css
+++ b/Alumni-Swag-App/src/app/app.component.css
@@ -6,4 +6,9 @@
     width: 1200px;
     height: 50px;
     background: rgb(255, 145, 0);
+    font: bold;
+    font-size: large;
+    text-align: right;
+    padding-top: 10px;
+    
 }
