--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -22,3 +22,22 @@
   </div>
 </div>
 
+<div class="container">
+  <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <button class="m-1 btn btn-light btn-outline-warning" Button
+        label = "Catalog">
+        Catalog
+      </button>
+      </li>
+
+      <li class="nav-item">
+        <button class="m-1 btn btn-light btn-outline-warning" Button
+        label = "Catalog">
+        Shopping Cart
+      </button>
+      </li>
+    </ul>
+  </nav>
+</div>
