--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -16,17 +16,22 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <button class="m-1 btn btn-light btn-outline-warning" Button
-        label = "Catalog">
+        label = "Catalog" (click) = "Shopping=false; Catalog=true;">
         Catalog
       </button>
       </li>
 
       <li class="nav-item">
         <button class="m-1 btn btn-light btn-outline-warning" Button
-        label = "Catalog">
+        label = "Catalog" (click) = "Shopping=true; Catalog=false;">
+        
         Shopping Cart
       </button>
       </li>
     </ul>
   </nav>
+
+<app-catalog *ngIf="Catalog"></app-catalog>
+<app-shopping-cart *ngIf="Shopping"></app-shopping-cart>
+
 </div>
