--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -11,7 +11,6 @@
     </div>
   </div>
 
-<div class="container">
   <nav class="navbar navbar-expand-sm bg-light navbar-dark">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -23,8 +22,7 @@
 
       <li class="nav-item">
         <button class="m-1 btn btn-light btn-outline-warning" Button
-        label = "Catalog" (click) = "Shopping=true; Catalog=false;">
-        
+        label = "Shopping" (click) = "Shopping=true; Catalog=false;">
         Shopping Cart
       </button>
       </li>
