--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -15,21 +15,18 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <button class="m-1 btn btn-light btn-outline-warning" Button
-        label = "Catalog" (click) = "Shopping=false; Catalog=true;">
+        label = "Catalog">
         Catalog
       </button>
       </li>
 
       <li class="nav-item">
         <button class="m-1 btn btn-light btn-outline-warning" Button
-        label = "Shopping" (click) = "Shopping=true; Catalog=false;">
+        label = "Shopping">
         Shopping Cart
       </button>
       </li>
     </ul>
   </nav>
-
-<app-catalog *ngIf="Catalog"></app-catalog>
-<app-shopping-cart *ngIf="Shopping"></app-shopping-cart>
 
 </div>
