--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -1,32 +1,23 @@
-<div class="container">
-  <router-outlet>
-  </router-outlet>
-</div>
-
-<div class="container">
-
-  <div class="row">
-    <div>
+  <div style="text-align: center;">
       <h3>Home Page</h3>
-    </div>
   </div>
 
-  <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+ <nav class="navbar navbar-expand-sm bg-light navbar-dark">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <button class="m-1 btn btn-light btn-outline-warning" Button
-        label = "Catalog">
-        Catalog
+        <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Catalog" routerLink = "/catalog" routerLinkActive = "active"> Catalog
       </button>
       </li>
 
       <li class="nav-item">
-        <button class="m-1 btn btn-light btn-outline-warning" Button
-        label = "Shopping">
-        Shopping Cart
+        <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Shopping" routerLink = "/shopping-cart" routerLinkActive = "active"> Shopping Cart
       </button>
       </li>
     </ul>
   </nav>
 
-</div>
+
+
+  <!-- routed view goes here! -->
+  <router-outlet></router-outlet>
+
