--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -1,9 +1,14 @@
   <div style="text-align: center;">
-      <h3>Home Page</h3>
+      <h3>Oklahoma State Alumni Swag</h3>
   </div>
 
  <nav class="navbar navbar-expand-sm bg-light navbar-dark">
     <ul class="navbar-nav">
+      <li class="nav-item">
+        <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Home" routerLink = "/home" routerLinkActive = "active"> Home
+      </button>
+      </li>
+
       <li class="nav-item">
         <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Catalog" routerLink = "/catalog" routerLinkActive = "active"> Catalog
       </button>
