--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -1,6 +1,7 @@
   <div class="container">
       <div style="text-align: center;">
-      <h3>Oklahoma State Alumni Swag</h3>
+      <h1>Oklahoma State Alumni Swag</h1>
+      <h5>Welcome to Your One-Stop Shop All Things OSU</h5>
   </div>
 
  <nav class="navbar- navbar-expand-sm bg-light navbar-dark">
@@ -28,7 +29,7 @@
   <app-shopping-cart *ngIF="Shopping"></app-shopping-cart>
   -->
 
-  
+
   <div>
     <!-- insert picture of OSU-->
   </div>
