--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -1,5 +1,17 @@
 <p>catalog works!</p>
-<div>
+<div class="container">
+<div class="row">
+<div class="col-sm-4">
     <img src="/assets/img/okstateshirt.jpg"/>
-    <h3>Shirt</h3>
+    <p>Shirt</p>
+    <div class="col-sm-4">
+        <img src="/assets/img/okstatemug.webp"/>
+        <p>Mug</p>
+    </div>
+    <div class="col-sm-4">
+        <img src="/assets/img/okstatesticker.jpg"/>
+        <h3>Sticker</h3>
+    </div>
+</div>
+</div>
 </div>
