--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,13 @@
-<p>shopping-cart works!</p>
+<div class="row">
+    <div class="col">
+        <app-filter></app-filter>
+    </div>
+
+    <div class="col">
+        <app-product-list></app-product-list>
+    </div>
+
+    <div class="col">
+        <app-cart></app-cart>
+    </div>
+</div>
