--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,7 @@
 <div class="row"></div>
 <div class="row"></div>
 
-<div class="row">
+<div class="row" style="margin-top:150px">
     <div class="col">
         <app-filter></app-filter>
     </div>
