home content pt1

--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<p class="white">home works!</p>
+<div>
+    <h5 style="text-align: center;" class=col-sm-3>How This Works:</h5>
+    <p style="text-align: left;" class="col-sm-3">Want to request some OSU gear? It's simple! Browse through our catalog of America's Greatest and request 
+        anything that fits your fancy. Once your entire order is submitted, one of our Spears Associates will 
+        contact you with further details.
+        Go Pokes!
+    </p>
+</div>
