--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -1,7 +1,7 @@
   <div class="container">
       <div style="text-align: center;">
       <h1>Oklahoma State Alumni Swag</h1>
-      <h5>Welcome to Your One-Stop Shop All Things OSU</h5>
+      <h6>Your One-Stop Shop for All Things OSU</h6>
   </div>
 
  <nav class="navbar- navbar-expand-sm bg-light navbar-dark">
