--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -5,12 +5,12 @@
     <img src="/assets/img/okstateshirt.jpg"/>
     <p>Shirt</p>
     <div class="col-sm-4">
-        <img src="/assets/img/okstatemug.webp"/>
+        <img src="/assets/img/osumug.jpeg"/>
         <p>Mug</p>
     </div>
     <div class="col-sm-4">
         <img src="/assets/img/okstatesticker.jpg"/>
-        <h3>Sticker</h3>
+        <p>Sticker</p>
     </div>
 </div>
 </div>
