--- a/Alumni-Swag-App/src/app/shopping-cart/filter/filter.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/filter/filter.component.html
@@ -1,1 +1,8 @@
-<p>filter works!</p>
+<form>
+    <div class="form">
+        <label for="from">Product Name</label>
+        <input type="number" id="prodname" class="form-control">
+    </div>
+
+    <button class="btn btn-warning btn-block">Filter by Product</button>
+</form>
