--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -3,7 +3,7 @@
         <app-filter></app-filter>
     </div>
 
-    <div class="col">
+    <div class="col-md-8">
         <app-product-list></app-product-list>
     </div>
 
