--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="col-md-8">
-        <app-product-list></app-product-list>
+        <app-product-list style="text-align:center">Item List</app-product-list>
     </div>
 
     <div class="col">
