--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top:50px; margin-left:100px">
+<div class="row" style="margin-top:50px">
     <div class="col">
         <app-filter></app-filter>
     </div>
