--- a/Alumni-Swag-App/src/app/shopping-cart/filter/filter.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/filter/filter.component.html
@@ -1,4 +1,8 @@
 <div class="card">
+    <div class="card-header">
+        <strong>Filters</strong>
+    </div>
+
     <div class="card-body">
         <form>
             <div class="form">
@@ -6,7 +10,7 @@
                 <input type="number" id="prodname" class="form-control">
             </div>
         
-            <button class="btn btn-warning btn-block">Filter by Product</button>
+            <button class="btn btn-warning btn-block btn-sm">Filter by Product</button>
         </form>
     </div>
 </div>
