--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -4,7 +4,7 @@
       <h6>Your One-Stop Shop for All Things OSU</h6>
   </div>
 
- <nav class="navbar- navbar-expand-sm bg-light navbar-dark">
+ <nav class="navbar-expand-sm bg-light navbar-dark">
     <ul class="navbar-nav">
       <li class="nav-item">
         <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Home" routerLink = "/home" routerLinkActive = "active"> Home
