--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -1,9 +1,24 @@
 <p class="white">home works!</p>
-<div>
-    <h5 style="text-align: center;" class=col-sm-3>How This Works:</h5>
-    <p style="text-align: left;" class="col-sm-3">Want to request some OSU gear? It's simple! Browse through our catalog of America's Greatest and request 
+
+<div class="row text-align:center"></div>
+<div class="col-sm-9 homepage">
+    <div>
+    <img class="picture" src = "/assets/img/ed-low-library3x2.jpg"/>
+    </div>
+
+</div>
+
+
+
+<div class="row">
+    <h5 style="text-align: center;" class= "col-sm-12">How This Works:</h5>
+</div>
+<div class="row">
+    <p class="col-sm-4"></p>
+    <p style="text-align: center;" class="col-sm-4">Want to request some OSU gear? It's simple! Browse through our catalog of America's Greatest and request 
         anything that fits your fancy. Once your entire order is submitted, one of our Spears Associates will 
         contact you with further details.
         Go Pokes!
     </p>
+    <p class="col-sm-4"></p>
 </div>
