--- a/Alumni-Swag-App/src/app/shopping-cart/filter/filter.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/filter/filter.component.html
@@ -7,7 +7,7 @@
         <form>
             <div class="form">
                 <label for="from">Product Name</label>
-                <input type="number" id="prodname" class="form-control">
+                <input type="text" id="prodname" class="form-control">
             </div>
         
             <button class="btn btn-warning btn-block btn-sm">Filter by Product</button>
