--- a/Alumni-Swag-App/src/styles.css
+++ b/Alumni-Swag-App/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-cart-item{
-    font:small
+.cart-item{
+    font-size:small;
 }
