--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -2,21 +2,18 @@
 <div class="container">
     <h1>Shirt</h1>
 <p>catalog works!</p>
-<div class="container">
+<div class="container img-fluid">
 <div class="col-sm-4">
     <img src="/assets/img/okstateshirt.jpg"/>
     <p>Shirt</p>
-    <div class="col-sm-4">
+    <div class="col-sm-4 img-fluid">
         <img src="/assets/img/osumug.jpeg"/>
         <p>Mug</p>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 img-fluid">
         <img src="/assets/img/okstatesticker.jpg"/>
         <p>Sticker</p>
     </div>
 </div>
-<<<<<<< HEAD
 </div>
-=======
->>>>>>> 642de2554199e222f840937fc23cf0e68164767c
 </div>
