--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -10,7 +10,7 @@
 
 
 
-<div class="row">
+<div class="row hometext">
     <h5 style="text-align: center;" class= "col-sm-12">How This Works:</h5>
 </div>
 <div class="row">
