--- a/Alumni-Swag-App/src/styles.css
+++ b/Alumni-Swag-App/src/styles.css
@@ -2,3 +2,11 @@
 .cart-item{
     font-size:small;
 }
+
+.filter{
+    font-size: small;
+}
+
+.card, .form-control, .btn{
+    border-radius: 0%;
+}
