--- a/Alumni-Swag-App/src/app/home/home.component.css
+++ b/Alumni-Swag-App/src/app/home/home.component.css
@@ -4,8 +4,8 @@
 
 .homepage {
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     padding-left: 20px;
     padding-right: 20px;
     border-style: dashed;
@@ -23,5 +23,12 @@
 
 .hometext {
     border-color: rgb(255, 145, 0);
+    border-left: dotted;
+    border-right: dotted;
+    background-color: rgba(255, 145, 0, 0.411);
+    
+}
+
+.margins {
     margin-top: 25px;
 }
