--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <p class="white">home works!</p>
 
 <div class="row text-align:center"></div>
@@ -10,15 +11,16 @@
 
 
 
-<div class="row hometext">
+<div class="row margins">
     <h5 style="text-align: center;" class= "col-sm-12">How This Works:</h5>
 </div>
 <div class="row">
     <p class="col-sm-4"></p>
-    <p style="text-align: center;" class="col-sm-4">Want to request some OSU gear? It's simple! Browse through our catalog of America's Greatest and request 
+    <p style="text-align: center;" class="col-sm-4 hometext">Want to request some OSU gear? It's simple! Browse through our catalog of America's Greatest and request 
         anything that fits your fancy. Once your entire order is submitted, one of our Spears Associates will 
         contact you with further details.
         Go Pokes!
     </p>
     <p class="col-sm-4"></p>
+</div>
 </div>
