--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -7,7 +7,7 @@
     <img src="/assets/img/okstateshirt.jpg"/>
     <p>Shirt</p>
     <div class="col-sm-4 img-fluid">
-        <img src="/assets/img/ostatemug.jpeg"/>
+        <img src="/assets/img/okstatemug.jpeg"/>
         <p>Mug</p>
     </div>
     <div class="col-sm-4 img-fluid">
