--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container margins">
 
 <div class="row margins">
-    <div class="col-sm-9 homepage">
+    <div class="col-sm-12 homepage">
         <div>
             <img class="picture" src = "/assets/img/ed-low-library3x2.jpg"/>
         </div>
