--- a/Alumni-Swag-App/src/styles.css
+++ b/Alumni-Swag-App/src/styles.css
@@ -14,3 +14,13 @@
 .product-btn{
     size: smaller;
 }
+
+
+.margins {
+    margin-top: 25px;
+}
+
+.container {
+    background-color: orange;
+}
+
