--- a/Alumni-Swag-App/src/app/home/home.component.css
+++ b/Alumni-Swag-App/src/app/home/home.component.css
@@ -8,17 +8,13 @@
     padding-bottom: 50px;
     padding-left: 20px;
     padding-right: 20px;
-    border-style: dotted;
-    background-color: orange;
-    border-width: 5px;
     margin-top: 50px;
-    border-color: black;
 }
 
 .picture {
-    border-style: double;
+    border-style: solid;
     text-align: right;
-    border-width: 15px;
+    border-width: 10px;
     margin-left: 50px;
     margin-right: 50px;
     border-color: black;
@@ -27,9 +23,7 @@
 .hometext {
     border-color: rgb(255, 145, 0);
     border-left: dotted;
-    border-right: dotted;
-    background-color: rgba(255, 145, 0, 0.411);
-    
+    border-right: dotted; 
 }
 
 .margins {
@@ -39,6 +33,10 @@
 .font {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
+}
+
+.container {
+    background-color: orange;
 }
 
 
