--- a/Alumni-Swag-App/src/app/shopping-cart/product-list/product-item/product-item.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/product-list/product-item/product-item.component.html
@@ -5,7 +5,7 @@
       <p class="card-text">!00% cotton long sleeve shirt. Great for keeping you warm on the coldest of nights.</p>
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-outline-warning product-btn">Add to Cart</button>
+          <button type="button" class="btn btn-sm btn-warning product-btn">Add to Cart</button>
           <button type="button" class="btn btn-sm btn-outline-secondary product-btn">View Details</button>
         </div>
       </div>
