--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -1,14 +1,14 @@
 <p class="white">leave it</p>
 
-<div class="container img-fluid d-block mx-auto">
+<div class="container productImage">
 <div class="col-sm-4">
     <img src="/assets/img/okstateshirt.jpg"/>
     <p>Shirt</p>
-    <div class="col-sm-4 img-fluid d-block mx-auto">
+    <div class="col-sm-4 productImage">
         <img src="/assets/img/okstatemug.jpeg"/>
         <p>Mug</p>
     </div>
-    <div class="col-sm-4 img-fluid d-block mx-auto">
+    <div class="col-sm-4 productImage">
         <img src="/assets/img/okstatesticker.jpg"/>
         <p>Sticker</p>
     </div>
