--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -1,6 +1,7 @@
 <p class="white">leave it</p>
 
 <div class="container productImage">
+    <div class="row">
 <div class="col-sm-4">
     <img src="/assets/img/okstateshirt.jpg"/>
     <p>Shirt</p>
@@ -12,5 +13,6 @@
         <img src="/assets/img/okstatesticker.jpg"/>
         <p>Sticker</p>
     </div>
+</div>
 </div>
 </div>
