it kind of worked

--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -1,18 +1,16 @@
 <p class="white">leave it</p>
-
-<div class="container productImage">
-    <div class="row">
-<div class="col-sm-4">
-    <img src="/assets/img/okstateshirt.jpg"/>
-    <p>Shirt</p>
-    <div class="col-sm-4 productImage">
-        <img src="/assets/img/okstatemug.jpeg"/>
-        <p>Mug</p>
-    </div>
-    <div class="col-sm-4 productImage">
-        <img src="/assets/img/okstatesticker.jpg"/>
-        <p>Sticker</p>
-    </div>
+&nbsp;
+&nbsp;
+<div class="row">
+<div>
+    <img src="assets/img/okstateshirt.jpg" class="productImage"/>
 </div>
+&nbsp;
+<div>
+    <img src="assets/img/okstatemug.jpeg" class="productImage"/>
+</div>
+&nbsp;
+<div>
+    <img src="assets/img/okstatesticker.jpg" class="productImage"/>
 </div>
 </div>
