--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -1,7 +1,7 @@
-<ul class="list-group">
-    <li class="list-group-item" *ngFor="let i of [1,2,3,4,5]">
-        <app-cart-item>
+<div *ngIf="cartItems.length === 0" class="alert alert-info">No Items in Cart</div>
 
-        </app-cart-item>
+<ul *ngIf="cartItems.length > 0" class="list-group">
+    <li class="list-group-item" *ngFor="let item of cartItems">
+        <app-cart-item [cartItems]="item"></app-cart-item>
     </li>
 </ul>
