--- a/Alumni-Swag-App/src/app/shopping-cart/product-list/product-item/product-item.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/product-list/product-item/product-item.component.html
@@ -4,7 +4,7 @@
       <p class="card-text">{{productItem.description}}</p>
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-warning product-btn">Add to Cart</button>
+          <button type="button" class="btn btn-sm btn-warning product-btn" (click)="handelAddToCart()">Add to Cart</button>
           <button type="button" class="btn btn-sm btn-outline-secondary product-btn">View Details</button>
         </div>
       </div>
