--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart-item/cart-item.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart-item/cart-item.component.html
@@ -1,4 +1,4 @@
 <div class="cart-item">
-    <span>{{ cartItems.productName }}</span> x <span>{{ cartItems.qty }}</span>
+    <span>{{ cartItem.productName }}</span> x <span>{{ cartItem.qty }}</span>
 </div>
 
