--- a/Alumni-Swag-App/src/styles.css
+++ b/Alumni-Swag-App/src/styles.css
@@ -24,6 +24,6 @@
     border-right: double;
     border-left: double;
     border-width: 150px;
-    border-color: orange;
+    border-color: rgb(255, 115, 0);
 }
 
