--- a/Alumni-Swag-App/src/app/home/home.component.css
+++ b/Alumni-Swag-App/src/app/home/home.component.css
@@ -3,27 +3,24 @@
 }
 
 .homepage {
-    text-align: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
+    text-align: left;
+    padding-top: 10px;
     margin-top: 50px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    border-style: dotted;
+    background-color: white;
+    border-color:black;
+    border-width: 10px;
 }
 
 .picture {
-    border-style: solid;
-    text-align: right;
-    border-width: 10px;
-    margin-left: 50px;
-    margin-right: 50px;
-    border-color: black;
+    width: 790px;
+
 }
 
 .hometext {
-    border-color: rgb(255, 145, 0);
-    border-left: dotted;
-    border-right: dotted;
 }
 
 
