--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -1,10 +1,12 @@
-  <div class="container">
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  
+  <div class="container hometext">
       <div style="text-align: center;">
-      <h1>Oklahoma State Alumni Swag</h1>
-      <h6>Your One-Stop Shop for All Things OSU</h6>
+      <h1 style="font-size: xx-large;">Oklahoma State Alumni Swag</h1>
+      <h6 style="font-family: Arial, Helvetica, sans-serif;">Your One-Stop Shop for All Things OSU</h6> 
   </div>
 
- <nav class="navbar-expand-sm bg-light navbar-dark">
+ <nav class="navbar-expand-sm bg-light navbar-dark" style="font-family: Arial, Helvetica, sans-serif;">
     <ul class="navbar-nav">
       <li class="nav-item">
         <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Home" routerLink = "/home" routerLinkActive = "active"> Home
