--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -16,11 +16,11 @@
 
 </div>
 <div class="row ">
-    <p style="text-align: center;" class="col-sm-3"></p>
-    <p style="text-align: center; font-family: sans-serif; font-size: medium; font-weight: lighter;" class="col-sm-6">Want to request some OSU gear? It's simple! Browse through our catalog of America's Greatest and request 
+    <img class="col-sm-3 img-fluid" src = "/assets/img/hd-quality-oklahoma-state-university-logos-png-3.png">
+    <p style="text-align: center; font-family: sans-serif; font-size: medium; font-weight: lighter;" class="col-sm-6 fancy">Want to request some OSU gear? It's simple! Browse through our catalog of America's Greatest and request 
         anything that fits your fancy. Once your entire order is submitted, one of our Spears Associates will 
         contact you with further details.</p>
-    <p style="text-align: center;" class="col-sm-3"></p>
+        <img class="col-sm-3 img-fluid" src = "/assets/img/hd-quality-oklahoma-state-university-logos-png-3.png">
 </div>
     <div class="row">
         <p style="text-align: center;" class="col-sm-3"></p>
@@ -28,5 +28,19 @@
         <p style="text-align: center;" class="col-sm-3"></p>
 
     </div>
+    <div class="row">
+        <p style="text-align: center;" class="col-sm-3"></p>
+        <div class="col-sm-6">
+            <!--
+                img
+                img
+                img
+            -->
+        </div>
+        <p style="text-align: center;" class="col-sm-3"></p>
+
+    </div>
+
+
 
 </div>
