--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -1,16 +1,21 @@
 <p class="white">leave it</p>
 &nbsp;
 &nbsp;
-<div class="row">
-<div>
-    <img src="assets/img/okstateshirt.jpg" class="productImage"/>
+
+<div class="row margins">
+    <div class="col-sm-12">
+        <div>
+            <img class="picture img-fluid" src = "/assets/img/BusinessBLDG.JPG"/>
+        </div>
+    </div>
 </div>
-&nbsp;
 <div>
-    <img src="assets/img/okstatemug.jpeg" class="productImage"/>
+    <h1>Contact Us</h1>
 </div>
-&nbsp;
 <div>
-    <img src="assets/img/okstatesticker.jpg" class="productImage"/>
-</div>
+    <h2>Spears School of Business</h2>
+    <h3>370 Business Building, Stillwater, OK 74078</h3>
+    <h3>(405) 744-5064</h3>
+    <h3>Spears@okstate.edu</h3>
+    
 </div>
