--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -30,12 +30,15 @@
     </div>
     <div class="row">
         <p style="text-align: center;" class="col-sm-3"></p>
-        <div class="col-sm-6">
+        <div class="col-sm-6 footer-margins">
             <!--
                 img
                 img
                 img
             -->
+            <img class="img-fluid footer-images" src = "/assets/img/instagram.jpg">
+            <img class="img-fluid footer-images" src = "/assets/img/twitter.jpg">
+            <img class="img-fluid footer-images2" src = "/assets/img/linkedin.jpg">
         </div>
         <p style="text-align: center;" class="col-sm-3"></p>
 
