--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -36,9 +36,17 @@
                 img
                 img
             -->
-            <img class="img-fluid footer-images" src = "/assets/img/instagram.jpg">
-            <img class="img-fluid footer-images" src = "/assets/img/twitter.jpg">
-            <img class="img-fluid footer-images2" src = "/assets/img/linkedin.jpg">
+            <a href = "https://www.instagram.com/spearsbusinessosu/">
+                <img class="img-fluid footer-images" style="margin-right: 12px;" src = "/assets/img/instagram.jpg">
+            </a>
+            <a href = "https://twitter.com/SpearsBusiness">
+                <img class="img-fluid footer-images" style="margin-right: 10px;" src = "/assets/img/twitter.jpg">
+            </a>
+            <a href = "https://www.linkedin.com/company/spears-school-of-business/">
+                <img class="img-fluid footer-images2" src = "/assets/img/linkedin.jpg">
+            </a>
+           
+           
         </div>
         <p style="text-align: center;" class="col-sm-3"></p>
 
