--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -12,7 +12,7 @@
 
 
 <div class="row margins">
-    <h5 style="text-align:center; font-family: Arial, Helvetica, sans-serif; font-size: x-large; font-weight: bold;" class= "col-sm-12">AMERICA'S BRIGHTEST ORANGE</h5>
+    <h5 style="text-align:center; font-size: x-large;" class= "col-sm-12">America's Brightest Orange</h5>
 
 </div>
 <div class="row ">
@@ -24,7 +24,7 @@
 </div>
     <div class="row">
         <p style="text-align: center;" class="col-sm-3"></p>
-        <p style="text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: large; font-weight: lighter;" class="col-sm-6">Go Pokes!</p>
+        <p style="text-align: center; font-size: large; font-weight: lighter;" class="col-sm-6">Go Pokes!</p>
         <p style="text-align: center;" class="col-sm-3"></p>
 
     </div>
