--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -9,13 +9,14 @@
         </div>
     </div>
 </div>
+
 <div>
-    <h1>Contact Us</h1>
+    <h1 style="font-family: Arial, Helvetica, sans-serif">Contact Us</h1>
 </div>
 <div>
-    <h2>Spears School of Business</h2>
-    <h3>370 Business Building, Stillwater, OK 74078</h3>
-    <h3>(405) 744-5064</h3>
-    <h3>Spears@okstate.edu</h3>
+    <h2 style="font-family: Arial, Helvetica, sans-serif">Spears School of Business</h2>
+    <h3 style="font-family: Arial, Helvetica, sans-serif">370 Business Building, Stillwater, OK 74078</h3>
+    <h3 style="font-family: Arial, Helvetica, sans-serif">(405) 744-5064</h3>
+    <h3 style="font-family: Arial, Helvetica, sans-serif">Spears@okstate.edu</h3>
     
 </div>
