--- a/Alumni-Swag-App/src/app/catalog/catalog.component.css
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.css
@@ -7,3 +7,9 @@ width: 200px;
 border-color: black;
 border-style: solid;
 }
+.contactFont{
+    text-align:center; 
+    font-family: Arial, Helvetica, sans-serif; 
+    font-size: x-large; 
+    font-weight: bold;
+}
