--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -1,21 +1,20 @@
-<p class="white">leave it</p>
-&nbsp;
-&nbsp;
-
+<div class="margins">
 <div class="row margins">
-    <div class="col-sm-12">
+    <div class="col-sm-12 homepage">
         <div>
             <img class="picture img-fluid" src = "/assets/img/BusinessBLDG.JPG"/>
         </div>
     </div>
 </div>
+
 <div>
-    <h1>Contact Us</h1>
+    <h1 class="margins" style = "text-align: center;">Contact Us:</h1>
 </div>
-<div>
+<div style = "text-align: center; font-family: Arial, Helvetica, sans-serif;">
     <h2>Spears School of Business</h2>
     <h3>370 Business Building, Stillwater, OK 74078</h3>
     <h3>(405) 744-5064</h3>
-    <h3>Spears@okstate.edu</h3>
+    <h3>spears@okstate.edu</h3>
     
+</div>
 </div>
