--- a/Alumni-Swag-App/src/app/catalog/catalog.component.css
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.css
@@ -7,3 +7,17 @@ width: 200px;
 border-color: black;
 border-style: solid;
 }
+
+.homepage {
+    text-align: left;
+    padding-top: 10px;
+    margin-top: 50px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    border-style: dotted;
+    background-color: white;
+    border-color:black;
+    border-width: 3px;
+    background-color: rgba(77, 76, 76, 0.11);
+}
