--- a/Alumni-Swag-App/src/app/catalog/catalog.component.css
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.css
@@ -20,7 +20,8 @@ border-style: solid;
     border-color:black;
     border-width: 3px;
     background-color: rgba(77, 76, 76, 0.11);
-    
+}
+
 .contactFont{
     text-align:center; 
     font-family: Arial, Helvetica, sans-serif; 
