--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -14,7 +14,7 @@
       </li>
 
       <li class="nav-item">
-        <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Catalog" routerLink = "/catalog" routerLinkActive = "active"> Catalog
+        <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Catalog" routerLink = "/catalog" routerLinkActive = "active"> Contact Us
       </button>
       </li>
 
