--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -10,11 +10,20 @@
 <div style="text-align: center;">
     <h1 style="font-family: Arial, Helvetica, sans-serif">Contact Us</h1>
 </div>
+<div>
+    <img class="img-fluid catalog-icons" src = "/assets/img/contact.png"/>
+</div>
+
+<!--
 <div style="font-family: Arial, Helvetica, sans-serif">
-    <h2>Spears School of Business</h2>
-    <h3>370 Business Building, Stillwater, OK 74078</h3>
+    <div class="row catalog-icons" style="text-align: center;">
+        <img class="img-fluid" src = "/assets/img/gradcap.jpg"/>
+        <h3>Spears School of Business</h3>
+    </div>
+-->
+   <!-- <h3>370 Business Building, Stillwater, OK 74078</h3>
     <h3>(405) 744-5064</h3>
     <h3>Spears@okstate.edu</h3>
-    
+   -->
 </div>
-</div>
+
