--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -7,8 +7,8 @@
     </div>
 </div>
 
-<div style="text-align: center;">
-    <h1 style="font-family: Arial, Helvetica, sans-serif">Contact Us</h1>
+<div style="text-align: center;" class="margins">
+    <h1>Contact Us:</h1>
 </div>
 <div>
     <img class="img-fluid catalog-icons" src = "/assets/img/contact.png"/>
