--- a/Alumni-Swag-App/src/app/app.component.html
+++ b/Alumni-Swag-App/src/app/app.component.html
@@ -1,6 +1,12 @@
-<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-  
-  <div class="container hometext">
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Oklahoma State University Swag</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container hometext">
       <div style="text-align: center;">
       <h1 style="font-size: xx-large;">Oklahoma State Alumni Swag</h1>
       <h6 style="font-family: Arial, Helvetica, sans-serif;">Your One-Stop Shop for All Things OSU</h6> 
@@ -25,20 +31,17 @@
     </ul>
   </nav>
 
-  <!--
-  <app-home *ngIF="Home"></app-home>
-  <app-catalog *ngIF="Catalog"></app-catalog>
-  <app-shopping-cart *ngIF="Shopping"></app-shopping-cart>
-  -->
 
-
-  <div>
-    <!-- insert picture of OSU-->
-  </div>
 
 
 
   <!-- routed view goes here! -->
   <router-outlet></router-outlet>
 </div>
+  </body>
+</html>
+
+
+  
+ 
 
