--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -50,8 +50,16 @@
         </div>
         <p style="text-align: center;" class="col-sm-3"></p>
 
+
+  
     </div>
 
+    <!-- test button for don't see what you like for shopping cart page-->
+    <div style="font-family: Arial, Helvetica, sans-serif;">
+        <button class="m-1 btn btn-light btn-outline-warning" Buttonlabel = "Custom" routerLink = "/custom" routerLinkActive = "active"> Click Here
+        </button>
+    </div>
+    
 
 
 </div>
