moved the image

--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div style="text-align: center;" class="margins">
+<div class="margins">
     <h1>Contact Us:</h1>
 </div>
 <div>
