--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 <div class="row margins">
     <div class="col-sm-12 homepage">
         <div>
-            <img class="picture img-fluid" src = "/assets/img/ed-low-library3x2.jpg"/>
+            <img class="picture img-fluid" src = "/assets/img/okstategear-copyright.png"/>
         </div>
     </div>
 </div>
