--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -1,5 +1,6 @@
-<div class="row" style="margin-top:50px">
-    <div class="col">
+<div class="margins">
+<div class="row" style="margin-top:50px; font-family: Arial, Helvetica, sans-serif;">
+    <div class="col-sm-2">
         <app-filter></app-filter>
     </div>
 
@@ -7,7 +8,9 @@
         <app-product-list style="text-align:center">Item List</app-product-list>
     </div>
 
-    <div class="col">
+    <div class="col-sm-2">
         <app-cart></app-cart>
     </div>
 </div>
+</div>
+
