card body equivlent

--- a/Alumni-Swag-App/src/app/shopping-cart/product-list/product-item/product-item.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/product-list/product-item/product-item.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4 box-shadow">
+<div class="card mb-4 box-shadow" style="height:auto">
     <img class="card-img-top" [src]="productItem.imageUrl">
     <div class="card-body">
       <p class="card-text">{{productItem.description}}</p>
