--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -12,9 +12,19 @@
 <div style="text-align:center" class="margins">
     <h1>Contact Us:</h1>
 </div>
-<div style="text-align:center">
-    <img class="img-fluid catalog-icons" src = "/assets/img/contact.png"/>
+
+<div class="row">
+<div class="col-sm-4">
+    <img class="img-fluid" src="assets/img/Classroom.jpeg"/>
 </div>
+<div class="col-sm-4">
+    <img class="img-fluid" src="assets/img/contact.png"/>
+</div>
+<div class="col-sm-4">
+    <img class="img-fluid" src="assets/img/BackofBLDG.jpeg"/>
+</div>
+</div>
+
 
 <!--
 <div style="font-family: Arial, Helvetica, sans-serif">
