--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="row margins">
-        <img class="img fluid shop" src = "/assets/img/shopv2.png">
+        <img class="img-fluid shop" src = "/assets/img/shopv2.png">
     </div>
 
     <!-- test button for don't see what you like for shopping cart page-->
