ssb website link

--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -24,6 +24,10 @@
     <img class="img-fluid" src="assets/img/BackofBLDG.jpeg"/>
 </div>
 </div>
+<div style="text-align:center">
+    <a href="https://business.okstate.edu/">Click here</a>
+    to learn more about the Spears School of Business
+</div>
 
 
 <!--
