--- a/Alumni-Swag-App/src/app/custom/custom.component.html
+++ b/Alumni-Swag-App/src/app/custom/custom.component.html
@@ -4,8 +4,12 @@
         <div class="col-sm-12">
             <img class="tellus img-fluid" src = "/assets/img/tellus2.png">
         </div>
+        <div>
+            <p style="font-style: italic; font-size: smaller;">Please note: custom requests may take longer. Therefore, please allow 3-5 business days for our team to contact you to ensure your desires are attainable. We appreciate your patience.</p>
+        </div>
         <div class="col-sm-12">
             <div> 
+                <form method="POST" action="mailto:emladd10@gmail.com"> 
                 <Label ID="email1" runat="server">Email:</Label>
                 <p>
                     <textarea ID="email" runat="server" style="width: 200px; height: 35px;"></textarea>
@@ -19,6 +23,7 @@
                 <p class="textbox">
                     <Button ID="submit" runat="server">Submit</Button>
                 </p>
+                </form>
             </div>
         </div>
     </div>
