--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -12,5 +12,15 @@
         <app-cart></app-cart>
     </div>
 </div>
+
+<!-- test button for don't see what you like for shopping cart page-->
+<div style="font-family: Arial, Helvetica, sans-serif;">
+    <div>
+        <p>Can't find what you're looking for?
+        <a style="font-style: italic;" routerLink = "/custom">Click here</a></p>
+    </div>
+   
+</div>
+
 </div>
 
