--- a/Alumni-Swag-App/src/app/custom/custom.component.html
+++ b/Alumni-Swag-App/src/app/custom/custom.component.html
@@ -1,4 +1,4 @@
-<div class="margins" style="font-family: Arial, Helvetica, sans-serif;">
+<!-- <div class="margins" style="font-family: Arial, Helvetica, sans-serif;">
 
     <div class="row margins">
         <div class="col-sm-12">
@@ -7,6 +7,7 @@
         <div>
             <p style="font-style: italic; font-size: smaller;">Please note: custom requests may take longer. Therefore, please allow 3-5 business days for our team to contact you to ensure your desires are attainable. We appreciate your patience.</p>
         </div>
+       
         <div class="col-sm-12">
             <div> 
                 <form method="POST" action="mailto:emladd10@gmail.com"> 
@@ -26,4 +27,4 @@
                 </form>
             </div>
         </div>
-    </div>
+    -->
