--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -16,8 +16,12 @@
 <!-- test button for don't see what you like for shopping cart page-->
 <div style="font-family: Arial, Helvetica, sans-serif;">
     <div>
-        <p>Can't find what you're looking for?
-        <a style="font-style: italic;" routerLink = "/custom">Click here</a></p>
+            <form method="POST" action="mailto:emladd10@gmail.com">
+                <p style="font-style: italic; font-size: smaller;">Can't find what you're looking for?
+                    Click and tell us how we can accommodate you.
+                    <Button ID="submit" runat="server" style="font-style: italic; font-size: smaller;">Click Here</Button>
+                </p>
+            </form>
     </div>
    
 </div>
