--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -20,7 +20,7 @@
         <img class= "img-fluid" src = "/assets/img/hd-quality-oklahoma-state-university-logos-png-3.png">
     </div>
     <div class="col-sm-6">
-        <p style="text-align: center; font-family: sans-serif; font-size: medium; font-weight: lighter;">Want to request some OSU gear? It's simple! Browse through our catalog of America's Greatest and request 
+        <p style="text-align: center; font-family: sans-serif; font-size: medium; font-weight: lighter;">Want to request some OSU gear? It's simple! Browse through our catalog of America's Greatest merchandise and request 
             anything that fits your fancy. Once your entire order is submitted, one of our Spears Associates will 
             contact you with further details.</p>
     </div>
