--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -62,11 +62,9 @@
 
   
     </div>
-
-    <div class="row margins">
-        <img class="img-fluid shop" src = "/assets/img/shopv2.png">
+    <div>
+        
     </div>
-    
 
 
 </div>
