--- a/Alumni-Swag-App/src/app/home/home.component.css
+++ b/Alumni-Swag-App/src/app/home/home.component.css
@@ -9,11 +9,11 @@
     padding-right: 10px;
     padding-left: 10px;
     padding-bottom: 10px;
-    border-style: dotted;
+    border-style: solid;
     background-color: white;
     border-color:black;
-    border-width: 3px;
-    background-color: rgba(77, 76, 76, 0.11);
+    border-width: 7px;
+    background-color: white;
 }
 
 .picture {
@@ -58,6 +58,11 @@
     height: 50px;
     border-color: black;
 
+}
+
+.spears {
+    width: 825px;
+    height: 300px;
 }
 
 
