--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -6,6 +6,12 @@
         <div>
             <img class="picture img-fluid" src = "/assets/img/okstategear-copyright.png"/>
         </div>
+        
+    </div>
+</div>
+<div class="row">
+    <div>
+        <img src="/assets/img/SpearsLogo.jpg" class="spears img-fluid">
     </div>
 </div>
 
@@ -62,9 +68,7 @@
 
   
     </div>
-    <div>
-        
-    </div>
+    
 
 
 </div>
