--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -5,3 +5,7 @@
         <app-cart-item [cartItem]="item"></app-cart-item>
     </li>
 </ul>
+
+<div class="row">
+    <button type="button" class="btn btn-sm btn-warning product-btn">Submit</button>
+</div>
