--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -6,6 +6,6 @@
     </li>
 </ul>
 
-<div class="row">
+<div class="row" style = "margin-left:20px">
     <button type="button" class="btn btn-sm btn-warning product-btn">Submit</button>
 </div>
