resize submit button

--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -7,5 +7,5 @@
 </ul>
 
 <div class="row" style = "margin-left:20px">
-    <button type="button" class="btn btn-sm btn-warning product-btn">Submit</button>
+    <button type="button" class="btn btn-md btn-warning product-btn">Submit</button>
 </div>
