--- a/Alumni-Swag-App/src/app/shopping-cart/filter/filter.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/filter/filter.component.html
@@ -1,4 +1,4 @@
-<div class="card Filter">
+<div class="card Filter" style = "margin-top:25px">
     <div class="card-header">
         <strong>Filters</strong>
     </div>
