--- a/Alumni-Swag-App/src/app/shopping-cart/product-list/product-item/product-item.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/product-list/product-item/product-item.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4 box-shadow">
     <img class="card-img-top" [src]="productItem.imageUrl">
-    <div class="card-body">
+    <div class="card-body" style = "height:50cm">
       <p class="card-text">{{productItem.description | slice: 0:80}}</p>
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
