--- a/Alumni-Swag-App/src/app/shopping-cart/product-list/product-item/product-item.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/product-list/product-item/product-item.component.html
@@ -1,10 +1,10 @@
 <div class="card mb-4 box-shadow">
     <img class="card-img-top" [src]="productItem.imageUrl">
-    <div class="card-body" style = "height:8cm">
+    <div class="card-body" style = "height:6cm">
       <p class="card-text">{{productItem.description | slice: 0:80}}</p>
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-warning product-btn" (click)="handelAddToCart()">Add to Cart</button>
+          <button type="button" class="btn btn-sm btn-warning product-btn" (click)="handelAddToCart()" style="position:fixed">Add to Cart</button>
           <!-- <button type="button" class="btn btn-sm btn-outline-secondary product-btn">View Details</button> -->
         </div>
       </div>
