--- a/Alumni-Swag-App/src/app/catalog/catalog.component.css
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.css
@@ -17,8 +17,8 @@ width: 50px;
     border-style: solid;
     background-color: white;
     border-color:black;
-    border-width: 7px;
-    background-color: rgba(77, 76, 76, 0.11);
+    border-width: 5px;
+    background-color: white;
 }
 
 .contactFont{
