email shopping cart

--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -9,3 +9,7 @@
 <div class="row" style = "margin-left:20px">
     <button type="button" class="btn btn-md btn-warning product-btn">Submit</button>
 </div>
+
+<form method="post" action="mailto:qbenedict2@att.net" >
+    <input type="submit" value="Send Email" /> 
+    </form>
