--- a/Alumni-Swag-App/src/app/catalog/catalog.component.html
+++ b/Alumni-Swag-App/src/app/catalog/catalog.component.html
@@ -4,7 +4,7 @@
 <div class="row margins">
     <div class="col-sm-12 homepage">
         <div>
-            <img class="picture img-fluid" src = "/assets/img/BusinessBLDG.JPG"/>
+            <img style= "border:black; border-style: solid;"class="picture img-fluid" src = "/assets/img/BusinessBLDG.JPG"/>
         </div>
     </div>
 </div>
@@ -15,30 +15,18 @@
 
 <div class="row">
 <div class="col-sm-4">
-    <img class="img-fluid" src="assets/img/Classroom.jpeg"/>
+    <img style= "border:black; border-style: solid;"class="img-fluid" src="assets/img/Classroom.jpeg"/>
 </div>
 <div class="col-sm-4">
     <img class="img-fluid" src="assets/img/contact.png"/>
 </div>
 <div class="col-sm-4">
-    <img class="img-fluid" src="assets/img/BackofBLDG.jpeg"/>
+    <img style= "border:black; border-style: solid;" class="img-fluid" src="assets/img/BackofBLDG.jpeg"/>
 </div>
 </div>
 <div style="text-align:center">
     <a href="https://business.okstate.edu/">Click here</a>
     to learn more about the Spears School of Business
   </div>
-  
-<!--
-<div style="font-family: Arial, Helvetica, sans-serif">
-    <div class="row catalog-icons" style="text-align: center;">
-        <img class="img-fluid" src = "/assets/img/gradcap.jpg"/>
-        <h3>Spears School of Business</h3>
-    </div>
--->
-   <!-- <h3>370 Business Building, Stillwater, OK 74078</h3>
-    <h3>(405) 744-5064</h3>
-    <h3>Spears@okstate.edu</h3>
-   -->
 
 
