--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -6,6 +6,14 @@
     </li>
 </ul>
 
-<div class="row" style = "margin-left:20px">
+<!-- <div class="row" style = "margin-left:20px">
     <button type="button" class="btn btn-md btn-warning product-btn" action="mailto:qbenedict2@att.net">Submit</button>
 </div>
+
+<form method="post" action="mailto:qbenedict2@att.net" >
+    <input type="submit" value="Send Email" /> 
+    </form> -->
+
+    <form ng-submit="cartItem">
+        <input type="submit">
+    </form>
