--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -14,6 +14,7 @@
     <input type="submit" value="Send Email" /> 
     </form> -->
 
-    <form ng-submit="cartItem">
+    <form ng-submit="cartItem" action="mailto:qbenedict2@att.net">
+        Submit
         <input type="submit">
     </form>
