submit button design

--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -15,6 +15,7 @@
     </form> -->
 
     <form ng-submit="cartItem" action="mailto:qbenedict2@att.net" class="btn btn-md btn-warning">
+        <input type = "text">
         <input type="submit">
     </form>
 
