populate text field with cart items

--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -15,8 +15,8 @@
     </form> -->
 
     <form ng-submit="cartItem" action="mailto:qbenedict2@att.net" class="btn btn-md btn-warning">
-        <input type = "text">
-        <input type="submit">
+        <input type = "text" {{cartItem}}>
+        <input type = "submit">
     </form>
 
     
