--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -14,7 +14,7 @@
     <input type="submit" value="Send Email" /> 
     </form> -->
 
-    <form ng-submit="cartItem()" action="mailto:qbenedict2@att.net" class="btn btn-md btn-warning">
+    <form ng-submit="cartItem()" action="mailto:qbenedict2@att.net" class="btn btn-sm btn-warning">
         <input type = "submit">
     </form>
 
