shopping cart design

--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row margins">
+    <div class="row" style="margin-top:20px">
             <div class="col-md-10" style="font-family: Arial, Helvetica, sans-serif;">
                 <app-product-list style="text-align:center">Item List</app-product-list>
             </div>
